# Franka_f3_Moveit

./: Code  Code_OMPL  Development_Log.md  README.md  Requirements  Requirements.md  Software Architecture.md  package.xml  setup.py
Development/: 2026-07-07_Official_Franka_ROS_2_Controller_Test.md  2026-07-08_Testing_joint_trajectory_controller.md  2026-07-09_Choosing_MoveIt_as_the_Main_Motion_Layer.md  2026-07-10_Creating_a_Custom_ROS_2_Python_Package.md  2026-07-11_Inspecting_Official_Franka_MoveIt_Configuration.md  2026-07-13_Organize_the_github_file.md  2026-07-14_Add_to_existing_package.md  2026-07-15_Explore_Potential_Extension_Motion_gripper_control.md  2026-07-16_Cartesian_Motion_Refactoring_Log.md  2026-07-20_MoveItPy_Arm_Execution_Mistakes_Log.md  2026-07-21_Pick_and_Place_Development_Log.md  2026-07-22_Repository_Organization_Log.md  README.md
docs/: Architecture.md  Code_OMPL.md  Docker_vs_Native.md  MoveItPy planning configuration.md.md  MoveIt_Configuration.md  Network_Setup.md  Troubleshooting.md
fr3_moveit_python/: __init__.py  cartesian_move.py  cartesian_move_old_version.py  gripper_control.py  motion.py  pick_place.py
launch/: cartesian_move.launch.py  fr3_moveit_demo.launch.py  pick_place.launch.py
test/: Debug.md  test_cartesian_move.py
