<!--
package.xml

Purpose:
Defines the ROS 2 package metadata, build system, and software
dependencies required to build and run the fr3_moveit_python package.

Responsibilities:
- Define package information
- Declare build and runtime dependencies
- Specify the build system (ament_python)
- Enable ROS 2 tools such as colcon and ros2 to build,
  install, and discover the package
-->

# verify ROS 2 recognizes package:

# ros2 pkg xml fr3_moveit_python
# nano package.xml
# cd ~/franka_ros2_ws/src/fr3_moveit_python  gedit package.xml

----------------------------------------------------------

<?xml version="1.0"?>
<?xml-model
href="http://download.ros.org/schema/package_format3.xsd"
schematypens="http://www.w3.org/2001/XMLSchema"?>

<package format="3">

  <!-- ================================================== -->
  <!-- Package Information                                -->
  <!-- ================================================== -->

  <name>fr3_moveit_python</name>

  <version>0.0.1</version>

  <description>
    ROS 2 Python package for controlling the Franka FR3 robot using MoveItPy.
    This package provides reusable Cartesian motion control, joint-space
    planning, Franka gripper control, and pick-and-place examples.
  </description>

  <maintainer email="ytang19@ualberta.ca">
    Yujie Tang
  </maintainer>

  <license>Apache-2.0</license>


  <!-- ================================================== -->
  <!-- Build System                                       -->
  <!-- ================================================== -->

  <!-- Python build system used by ROS 2 -->
  <buildtool_depend>ament_python</buildtool_depend>


  <!-- ================================================== -->
  <!-- Runtime Dependencies                               -->
  <!-- ================================================== -->

  <!-- ROS 2 Python client library -->
  <exec_depend>rclpy</exec_depend>

  <!-- MoveItPy motion planning interface -->
  <exec_depend>moveit_py</exec_depend>

  <!-- PoseStamped for Cartesian motion -->
  <exec_depend>geometry_msgs</exec_depend>

  <!-- Franka gripper action definitions -->
  <exec_depend>franka_msgs</exec_depend>

  <!-- FollowJointTrajectory action -->
  <exec_depend>control_msgs</exec_depend>


  <!-- ================================================== -->
  <!-- Launch System                                      -->
  <!-- ================================================== -->

  <!-- ROS 2 launch framework -->
  <exec_depend>launch</exec_depend>

  <!-- ROS 2 launch integration -->
  <exec_depend>launch_ros</exec_depend>

  <!-- Locate installed package resources -->
  <exec_depend>ament_index_python</exec_depend>

  <!-- Process URDF/SRDF Xacro files -->
  <exec_depend>xacro</exec_depend>


  <!-- ================================================== -->
  <!-- Franka Robot Configuration                         -->
  <!-- ================================================== -->

  <!-- FR3 URDF/SRDF description -->
  <exec_depend>franka_description</exec_depend>

  <!-- Official FR3 MoveIt configuration -->
  <exec_depend>franka_fr3_moveit_config</exec_depend>


  <!-- ================================================== -->
  <!-- Python Libraries                                   -->
  <!-- ================================================== -->

  <!-- Numerical computation -->
  <exec_depend>python3-numpy</exec_depend>

  <!-- Quaternion and rotation conversion -->
  <exec_depend>python3-scipy</exec_depend>

  <!-- YAML configuration loader -->
  <exec_depend>python3-yaml</exec_depend>


  <!-- ================================================== -->
  <!-- Testing                                             -->
  <!-- ================================================== -->

  <test_depend>python3-pytest</test_depend>


  <!-- ================================================== -->
  <!-- Export                                              -->
  <!-- ================================================== -->

  <export>

    <!-- Build this package as a ROS 2 Python package -->
    <build_type>ament_python</build_type>

  </export>

</package>
